Import are now pasted in the box in alphabetical order and added some guidance over the first time about the drag and drop mechanic

--- a/css/main.css
+++ b/css/main.css
@@ -605,6 +605,10 @@ table.field {
 .box-poke{
     min-height: 30px;
 }
+.dropzone::before{
+    content:attr(data-placeholder);
+    color:gray
+}
 
 .deadzone:hover{
     background: #722323;
